Managed/Font/Internal/Generated/FontNativeGenerated.g.cs

// Auto-generated by csharp-binding-generator. Do not edit by hand.
using System;
using System.Runtime.InteropServices;

namespace Luna.Font.Internal;

[StructLayout(LayoutKind.Sequential)]
internal partial struct NativeFontHandle
{
    public IntPtr Object;
    public IntPtr IfontFile;
}

internal static partial class FontNativeGenerated
{
    [DllImport("LunaFontC", EntryPoint = "luna_font_init_module", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr InitModule();

    [DllImport("LunaFontC", EntryPoint = "luna_font_load_ttf_font_file", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr LoadTtfFontFile(IntPtr data, ulong dataSize, out NativeFontHandle outFontFile);

    [DllImport("LunaFontC", EntryPoint = "luna_font_get_default_font", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr GetDefaultFont(out NativeFontHandle outFontFile);

    [DllImport("LunaFontC", EntryPoint = "luna_font_ifont_file_get_data", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr IfontFileGetData(IntPtr self, out IntPtr outData, out ulong outSize);

    [DllImport("LunaFontC", EntryPoint = "luna_font_ifont_file_get_num_fonts", CallingConvention = CallingConvention.Cdecl)]
    internal static extern uint IfontFileGetNumFonts(IntPtr self);

    [DllImport("LunaFontC", EntryPoint = "luna_font_ifont_file_find_glyph", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int IfontFileFindGlyph(IntPtr self, uint fontIndex, uint codepoint);

    [DllImport("LunaFontC", EntryPoint = "luna_font_ifont_file_scale_for_pixel_height", CallingConvention = CallingConvention.Cdecl)]
    internal static extern float IfontFileScaleForPixelHeight(IntPtr self, uint fontIndex, float pixels);

    [DllImport("LunaFontC", EntryPoint = "luna_font_ifont_file_get_vmetrics", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void IfontFileGetVmetrics(IntPtr self, uint fontIndex, out global::Luna.Font.VMetrics outMetrics);

    [DllImport("LunaFontC", EntryPoint = "luna_font_ifont_file_get_glyph_hmetrics", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void IfontFileGetGlyphHmetrics(IntPtr self, uint fontIndex, int glyph, out global::Luna.Font.GlyphHMetrics outMetrics);

    [DllImport("LunaFontC", EntryPoint = "luna_font_ifont_file_get_kern_advance", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int IfontFileGetKernAdvance(IntPtr self, uint fontIndex, int glyph1, int glyph2);

    [DllImport("LunaFontC", EntryPoint = "luna_font_ifont_file_get_glyph_shape", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr IfontFileGetGlyphShape(IntPtr self, uint fontIndex, int glyph, IntPtr outCommands, ulong capacity, out ulong outCount);

    [DllImport("LunaFontC", EntryPoint = "luna_font_ifont_file_get_glyph_bounding_box", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr IfontFileGetGlyphBoundingBox(IntPtr self, uint fontIndex, int glyph, out global::Luna.Font.RectI outRect);

    [DllImport("LunaFontC", EntryPoint = "luna_font_ifont_file_get_glyph_bitmap_box", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr IfontFileGetGlyphBitmapBox(IntPtr self, uint fontIndex, int glyph, float scaleX, float scaleY, float shiftX, float shiftY, out global::Luna.Font.RectI outRect);

    [DllImport("LunaFontC", EntryPoint = "luna_font_ifont_file_render_glyph_bitmap", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr IfontFileRenderGlyphBitmap(IntPtr self, uint fontIndex, int glyph, IntPtr output, int outW, int outH, int outRowPitch, float scaleX, float scaleY, float shiftX, float shiftY);

}
